# zk-merkle-proofs

./: README.md
merkle-tree/: Cargo.toml
merkle-tree/src/: crypto_utils.rs  main.rs  merkle.rs  verification.rs
merkle-tree/src/back-up/: main.rs
