[package]
name = "merkle-tree"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"

tiny-keccak = { version = "2.0", features = ["keccak"] }

poseidon-rs = "0.0.10"

rayon = "1.7"

serde = { version = "1.0", features = ["derive"] }

bincode = "1.3"

sled = "0.34"

ark-groth16 = "0.4"

rlp = "0.5"

bellman = "0.9.0"

bls12_381 = "0.7.0"

rand = "0.8.0"

ff = "0.13.0"

group = "0.13.0"
